feat: started header block

--- a/index.html
+++ b/index.html
@@ -3,8 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Vela Vla</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="header_logo_phone">
+                <div class="header_logo">
+                    <img src="images/logo.png" alt="Logo">
+                </div>
+                <div class="header_phone">
+                    <img src="images/phone_icon.png" alt="phone">
+                    <a href="tel:+821075269192">+ 82 (10) 7526-9192</a>
+                </div>
+            </div>
+
+            <div class="header_info">
+                <h3>Добро пожаловать в онлайн школу</h3>
+                <h1>VeraVla edu!</h1>
+                <p>Переквалифицируйся в разработчика искусственного интеллекта <br> и получи высокооплачиваемую работу    </p>
+                <div class="header_info_courses">
+                    <img src="images/diplom_icon.png" alt="Diplom">
+                    <div class="header_info_text">
+                        <p>Мы обучаем с гарантией!</p>
+                        <p>Первый месяц действует гарантия 100% возврата <br>
+                            денег, если тебя не устроят наши курсы
+                        </p>
+                    </div>
+
+                </div>
+                <div class="header_button">
+                    <button></button>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
