feat: finished block header and started block reasons

--- a/index.html
+++ b/index.html
@@ -27,17 +27,77 @@
                     <img src="images/diplom_icon.png" alt="Diplom">
                     <div class="header_info_text">
                         <p>Мы обучаем с гарантией!</p>
-                        <p>Первый месяц действует гарантия 100% возврата <br>
+                        <p class="turquoise">Первый месяц действует гарантия 100% возврата <br>
                             денег, если тебя не устроят наши курсы
                         </p>
                     </div>
 
                 </div>
                 <div class="header_button">
-                    <button></button>
+                    <button>Записать на ознакомительный вебинар</button>
                 </div>
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="reasons">
+            <div class="container">
+                <h2><span>7 причин</span> почему  <br> именно мы?</h2>
+                <div class="reasons_cards">
+                    <div class="reasons_cards_first_line">
+                        <div class="card_first_line">
+                            <img src="images/reasons_icon1.png" alt="AI">
+                            <p class="reasons_text">
+                                Ты станешь <br> востребованным <br> специалистом в области <br> искусственного интеллекта
+                            </p>
+                        </div>
+                        <div class="card_first_line">
+                            <img src="images/reasons_icon2.png" alt="Model">
+                            <p class="reasons_text">
+                                Будешь создавать свои <br> модели искусственного <br> интеллекта на языке <br> программирования Python
+                            </p>
+                        </div>
+                        <div class="card_first_line">
+                            <img src="images/reasons_icon3.png" alt="Programms">
+                            <div class="reasons_text">
+                                Сумеешь создавать <br> программы, связанные <br>
+                                с компьютерным зрением и <br> нейронными сетями.
+                            </div>
+                        </div>
+                        <div class="card_first_line">
+                            <img src="images/reasons_icon4.png" alt="Teacher">
+                            <div class="reasons_text">
+                                Мы обучаем только тому,<br> что тебе пригодится <br>
+                                во время работы!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reasons_cards_second_line">
+                        <div class="cards_second_line">
+                            <img src="images/reasons_icon5.png" alt="Friends">
+                            <div class="reasons_text">
+                                Ты найдешь единомышленников,<br>
+                                с которыми сможешь создавать свои <br> проекты
+                            </div>
+                        </div>
+                        <div class="cards_second_line">
+                            <img src="images/reasons_icon6.png" alt="Community">
+                            <div class="reasons_text">
+                                Мы создаём сообщество <br> профессионалов, таких же как и мы,<br> жаждущих развивать и изменять этот мир <br> к лучшему с помощью IT технологий
+                            </div>
+                        </div>
+                        <div class="cards_second_line">
+                            <img src="images/reasons_icon7.png" alt="Building">
+                            <div class="reasons_text">
+                                После успешного завершения курса, мы <br> поможем тебе трудоустроиться <br>
+                                в Южнокорейские IT компании!
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
