feat: finished reasons block and started important block

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vela Vla</title>
 </head>
 <body>
+    <!--Header block-->
     <header>
         <div class="container">
             <div class="header_logo_phone">
@@ -41,6 +42,7 @@
     </header>
 
     <main>
+        <!--Reasons block-->
         <div class="reasons">
             <div class="container">
                 <h2><span>7 причин</span> почему  <br> именно мы?</h2>
@@ -95,6 +97,65 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <!--Important-->
+        <div class="important">
+            <div class="container">
+                <h2><span>Важно</span> понимать что</h2>
+                <div class="important_first_line">
+                    <div class="important_first_info">
+                        <div class="info_first">
+                            <img src="images/important_icon1.png" alt="AI">
+                            <div class="info_text">
+                                Искусственный интеллект - <br>
+                                это не одна дисциплина, как <br> думают многие, а совокупность <br> различных между собой <br> направлений.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="important_first_info">
+                        <div class="info_first">
+                            <img src="images/important_icon2.png" alt="Study">
+                            <div class="info_text">
+                                Подготовка реально <br> хороших специалистов <br>требует времени,<br> краткосрочные курсы <br>эффекта не дают.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="important_second_line">
+                    <div class="important_second_info">
+                        <div class="info_second">
+                            <div class="info_text">
+                                Большинство менторов <br> никогда не работали над <br> реальными проектами. <br>
+                                Они изучали все по <br> видеоурокам и книжкам, <br>
+                                и преподают без практики, <br> что очень печально.
+                            </div>
+                            <img src="images/important_icon3.png" alt="Meeting">
+                        </div>
+                    </div>
+                    <div class="important_second_info">
+                        <div class="info_second">
+                            <div class="info_text">
+                                На многих курсах <br>
+                                преподают готовые/ <br>идеальные кейсы <br>
+                                без всяких сложностей, <br>
+                                 поэтому студенты после <br> таких курсов не могут <br>
+                                решать реальные задачи <br>
+                                на работе.
+                            </div>
+                            <img src="images/important_icon4.png" alt="Work">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Learning-->
+        <div class="learning">
+            <div class="container">
+                <div class="learning_left"></div>
+                <div class="learning_right">
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
