--- a/index.html
+++ b/index.html
@@ -100,6 +100,52 @@
                 </div>
             </div>
         </div>
+
+        <!--Intelligence-->
+        <div class="intelligence">
+            <div class="container">
+                <h2>Искусственный <br> интеллект - это круто? </h2>
+                <div class="intelligence_section_inner">
+                    <div class="section_inner_first">
+                        <div class="first_flex">
+                            <img src="images/intelligence_checked.png" alt="Checked">
+                            <div class="first_info_text">
+                                На данный момент только в Южной Корее ищут 10,000 специалистов в области AI!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section_inner_second">
+                            <div class="second_flex">
+                                <img src="images/intelligence_checked.png" alt="Checked">
+                                <div class="second_info_text">
+                                    Младшие разработчики искусственного интеллекта без опыта работы могут <br>получать в Южной Корее 60,000,000 вон (51,000$) в год. Специалист со <br> средним стажем работы может получать уже около 100,000,000 вон <br> (85,000$) в год.
+                                </div>
+                            </div>
+                    </div>
+                    <div class="section_inner_third">
+                            <div class="third_flex">
+                                <img src="images/intelligence_checked.png" alt="Checked">
+                                <div class="third_info_text">
+                                    В США уровень зарплат ещё выше! Младший специалист без опыта <br> работы получает в среднем 93,000$ в год. А инженер со средним <br> стажем работы получает уже больше 140,000$ в год!
+                                </div>
+                            </div>
+                    </div>
+                    <div class="section_inner_fourth">
+                            <div class="fourth_flex">
+                                <img src="images/intelligence_checked.png" alt="Checked">
+                                <div class="fourth_info_text">
+                                    А самое вкусное то, что твоя зарплата будет расти вместе <br>
+                                    с твоими навыками. Стаж не так важен.
+                                </div>
+                            </div>
+                    </div>
+                </div>
+                <div class="intelligence_button">
+                    <button>Записаться на ознакомительный вебинар</button>
+                </div>
+            </div>
+        </div>
+
         <!--Important-->
         <div class="important">
             <div class="container">
@@ -150,6 +196,7 @@
                 </div>
             </div>
         </div>
+
         <!--Learning-->
         <div class="learning">
             <div class="container">
