feat: Continuing with the intellegence block

--- a/index.html
+++ b/index.html
@@ -101,14 +101,15 @@
             </div>
         </div>
 
-        <!--Intelligence-->
+        <!--Intelligence block-->
         <div class="intelligence">
             <div class="container">
-                <h2>Искусственный <br> интеллект - это круто? </h2>
+                <h2> <span>Искусственный <br> интеллект</span> - это круто? </h2>
                 <div class="intelligence_section_inner">
                     <div class="section_inner_first">
                         <div class="first_flex">
                             <img src="images/intelligence_checked.png" alt="Checked">
+                            <img class="ellipse" src="images/ellipse_intellegence.png" alt="">
                             <div class="first_info_text">
                                 На данный момент только в Южной Корее ищут 10,000 специалистов в области AI!
                             </div>
