feat: start and finished learning block

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
         </div>
 
-        <!--Important-->
+        <!--Important block-->
         <div class="important">
             <div class="container">
                 <h2><span>Важно</span> понимать что</h2>
@@ -201,10 +201,64 @@
             </div>
         </div>
 
-        <!--Learning-->
+        <!--Learning block-->
         <div class="learning">
             <div class="container">
-                <div class="learning_left"></div>
+                <div class="learning_left">
+                    <h2>Почему именно наш курс ? <br>
+                        <span>Все просто !</span>
+                    </h2>
+                    <div class="learning_section_inner">
+                        <div class="learning_section_inner_first">
+                            <div class="inner_first_flex">
+                                <img src="images/learning_checked.png" alt="Checked">
+                                <div class="inner_info_text">
+                                    Объясняем сложные вещи простым и доходчивым языком.
+                                </div>
+                                <img class="learning_ellipse" src="images/ellipse_intellegence.png" alt="">
+                            </div>
+                        </div>
+                        <div class="learning_section_inner_second">
+                            <div class="inner_second_flex">
+                                <img src="images/learning_checked.png" alt="Checked">
+                                <div class="inner_info_text">
+                                    Обучаем не просто языку программирования, или одной какой-то <br> дисциплине, мы обучаем полностью всей специальности.
+                                </div>
+                                <img class="learning_ellipse" src="images/ellipse_intellegence.png" alt="">
+                            </div>
+                        </div>
+                        <div class="learning_section_inner_third">
+                            <div class="inner_third_flex">
+                                <img src="images/learning_checked.png" alt="Checked">
+                                <div class="inner_info_text">
+                                    Ознакомляем с содержанием урока только в режиме реального времени. Ты <br> сможешь сразу задать вопрос и тут же получить ответы. Мы всегда будем рядом.
+                                </div>
+                                <img class="learning_ellipse" src="images/ellipse_intellegence.png" alt="">
+                            </div>
+                        </div>
+                        <div class="learning_section_inner_fourth">
+                            <div class="inner_fourth_flex">
+                                <img src="images/learning_checked.png" alt="Checked">
+                                <div class="inner_info_text">
+                                    Обучение ведет ведущий и действующий специалист в области <br> искусственного интеллекта в Южной Корее.
+                                </div>
+                                <img class="learning_ellipse" src="images/ellipse_intellegence.png" alt="">
+                            </div>
+                        </div>
+                        <div class="learning_section_inner_fifth">
+                            <div class="inner_fifth_flex">
+                                <img src="images/learning_checked.png" alt="Checked">
+                                <div class="inner_info_text">
+                                    Обучение проходит в группе по 15 человек, которая внутри делится на 3 <br> команды, и каждая команда выполняет собственный проект. Таким образом, <br> студенты смогут прочувствовать тонкости командной разработки, и уже на <br> этапе обучения окунуться в рабочую атмосферу AI специалиста.
+                                </div>
+                                <img class="learning_ellipse" src="images/ellipse_intellegence.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="learning_button">
+                        <button>Записаться на ознакомительный семинар</button>
+                    </div>
+                </div>
                 <div class="learning_right">
                     <img src="" alt="">
                 </div>
