feat: started courses block

--- a/index.html
+++ b/index.html
@@ -264,6 +264,149 @@
                 </div>
             </div>
         </div>
+
+        <!--Courses-->
+        <div class="courses">
+            <div class="container">
+                <h2>Что я узнаю из этих курсов?</h2>
+                <div class="small_title">
+                    Полностью весь курс состоит из 3 частей
+                </div>
+                <div class="junior_level">
+                    <div class="junior_level_title">
+                        <img src="images/courses_ellipse.png" alt="ellipse">
+                        <h3>AI - Junior Level.</h3>
+                        <span>Продолжительность 1 год</span>
+                        <button>
+                            <img src="images/courses_button.png" alt="button">
+                        </button>
+                    </div>
+                    <div class="inner_sections">
+                        <div class="first_section">
+                            <div class="first_section_left">
+                                <span>1</span>
+                            </div>
+                            <div class="first_section_right">
+                                <h3 class="inner_title">Введение.</h3>
+                                <p class="inner_text">
+                                    В этой секции, мы познакомимся с историей человека, который переквалифицировался в специалиста по искусственному интеллекту и отвечаем на <br> вопрос: "Стоит ли это того, чтобы потратить 2 года на изучение искусственного интеллекта?" Также, мы разберём уроки, усвоенные специалистами, <br>прошедших путь от младших до главных специалистов.
+                                </p>
+                            </div>
+                        </div>
+                          <div class="second_section">
+                            <div class="second_section_left">
+                                <span>2</span>
+                            </div>
+                            <div class="second_section_right">
+                                <h3 class="inner_title">Введение в программирование. </h3>
+                                <p class="inner_text">
+                                    Эта секция начинается с объяснения понятий проблемы, сути и целей искусственного интеллекта. Ты узнаешь в чем разница между данными и <br> информацией. А также что такое качество информации. Мы разберём, что такое алгоритмы, компьютерные программы и язык программирования <br> Python, и начнём работать в интегрированной среде разработки для языка Python. Далее мы поймем суть переменных их свойства и типы. Именно с <br> этой секции ты начнёшь писать свои первые программные коды на языке программирования Python. Мы изучим все аспекты этого удивительного <br> языка.  Далее мы разберём такие библиотеки как Numpy, Pandas и Matplotlib. В этой секции ты познакомишься со средой разработки Jupyter <br> Notebook.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="third_section">
+                            <div class="third_section_left">
+                                <span>3</span>
+                            </div>
+                            <div class="third_section_right">
+                                <h3 class="inner_title">Введение в искусственный интеллект. </h3>
+                                <p class="inner_text">
+                                    Эта секция показывает нам, разницу между линейным и нелинейным программированием. Описывает процесс получение знаний. Также, ты <br> узнаешь, в чем разница между AI, machine learning и deep learning. Также обсудим виды искусственного интеллекта, его применения и примеры.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="fourth_section">
+                            <div class="fourth_section_left">
+                                <span>4</span>
+                            </div>
+                            <div class="fourth_section_right">
+                                <h3 class="inner_title">Алгоритм machine learning.</h3>
+                                <p class="inner_text">
+                                    В этих секциях, мы подробно разберём работу алгоритмов machine learning. И ты создашь очень простую, но уже свою модель искусственного <br> интеллекта. Также ты научишься оценивать точность моделей. В этой секции мы подробно начнём разбирать одну из библиотек искусственного <br>интеллекта scikit learn. Здесь же мы разберём другую среду разработки, которая называется spyder.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="fifth_section">
+                            <div class="fifth_section_left">
+                                <span>5</span>
+                            </div>
+                            <div class="fifth_section_right">
+                                <h3 class="inner_title">Процесс разработки модели искусственного интеллекта и инженерия данных.</h3>
+                                <p class="inner_text">
+                                    Здесь мы подробно обсудим весь процесс разработки модели искусственного интеллекта. Также мы начнём изучение анализа данных и их <br> обработки для обучения искусственного интеллекта. В этой секции я научу тебя практическим примерам анализа и обработки данных от А до Я.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="sixth_section">
+                            <div class="sixth_section_left">
+                                <span>6</span>
+                            </div>
+                            <div class="sixth_section_right">
+                                <h3 class="inner_title">Отбор фичей.</h3>
+                                <p class="inner_text">
+                                    В этой секции из всех данных, что у нас есть, мы научимся отбирать только те, что нам нужны для обучения искусственного интеллекта.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="seventh_section">
+                            <div class="seventh_section_left">
+                                <span>7</span>
+                            </div>
+                            <div class="seventh_section_right">
+                                <h3 class="inner_title">Чек лист почти для всех проектов искусственного интеллекта.</h3>
+                                <p class="inner_text">
+                                    В этой секции я дам чек лист действий для построения end-to-end проектов искусственного интеллекта.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="eighth_section">
+                            <div class="eighth_section_left">
+                                <span>8</span>
+                            </div>
+                            <div class="eighth_section_right">
+                                <h3 class="inner_title">Практические занятия. </h3>
+                                <p class="inner_text">
+                                    На практических занятиях мы научим наши модели искусственного интеллекта следующим вещам: предсказывать нажатие на рекламу <br> пользователем в фейсбуке; определять рак груди; предсказывать ухода в отставку клиентов банка; определять наличие кифоза у детей; определять <br>положительные и отрицательные отзывы yelp; определять положительные и отрицательные отзывы на амазоне; определять спам письма; <br> предсказывать наличие болезней сердца у пациентов; определять износ деталей на токарном станке.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="ninth_section">
+                            <div class="ninth_section_left">
+                                <span>9</span>
+                            </div>
+                            <div class="ninth_section_right">
+                                <h3 class="inner_title">Deep learning: Искусственные нейронные сети.</h3>
+                                <p class="inner_text">
+                                   В этой секции ты узнаешь, что такое deep learning и как это работает, также ты поймешь, что такое нейроны и как нейроные сети обучаются. Мы <br> детально разберём все процессы, связанные с нейронными сетями. Ты также познакомишься с библиотекой keras, фреймворком tensorflow  и <br> средой разработки google colab.
+                                </p>
+                            </div>
+                        </div>
+                         <div class="tenth_section">
+                            <div class="tenth_section_left">
+                                <span>10</span>
+                            </div>
+                            <div class="tenth_section_right">
+                                <h3 class="inner_title">Deep learning: конволюционные нейронные сети. </h3>
+                                <p class="inner_text">
+                                   Эта секция посвящена конволюционным нейронным сетям, которые применяются в компьютерном зрении. Мы детально разберём как <br> искусственный интеллект распознает те или иные вещи, например, машины или яблоки.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="eleven_section">
+                            <div class="eleventh_section_left">
+                                <span>11</span>
+                            </div>
+                            <div class="eleventh_section_right">
+                                <h3 class="inner_title">Практические занятия. </h3>
+                                <p class="inner_text">
+                                   На этих занятиях ты разработаешь свои нейронные сети, которые смогут: предсказывать цены автомобилей; предсказывать выходную мощность <br> электростанций (кейс виртуальных сенсоров); предсказывать поломки насоса на основе данных из сенсоров насоса; распознавать рукописные <br> цифры, распознавать элементы одежды, распознавать различные объекты; распознавать повреждённые автомобили; распознавать уличные <br> дорожные знаки для беспилотных автомобилей.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
