feat: finished courses block and added mixin for all blocks

--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
             </div>
         </div>
 
-        <!--Courses-->
+        <!--Courses block-->
         <div class="courses">
             <div class="container">
-                <h2>Что я узнаю из этих курсов?</h2>
+                <h2> <span>Что я узнаю</span> из этих курсов?</h2>
                 <div class="small_title">
                     Полностью весь курс состоит из 3 частей
                 </div>
@@ -404,6 +404,31 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="senior_level">
+                    <div class="senior_level_title">
+                        <img src="images/courses_ellipse.png" alt="ellipse">
+                        <h3>AI - Senior Level.</h3>
+                        <span>Продолжительность 1.5 годa.</span>
+                        <p>В разработке</p>
+                        <button>
+                            <img src="images/courses_button.png" alt="button">
+                        </button>
+                    </div>
+                </div>
+                <div class="senior2_level">
+                     <div class="senior2_level_title">
+                        <img src="images/courses_ellipse.png" alt="ellipse">
+                        <h3>AI - Senior Level V2.0.</h3>
+                        <span>Продолжительность 1.5 годa.</span>
+                        <p>В разработке</p>
+                        <button>
+                            <img src="images/courses_button.png" alt="button">
+                        </button>
+                    </div>
+                </div>
+                <div class="courses_button">
+                    <button>Записаться на ознакомительный вебинар</button>
                 </div>
             </div>
         </div>
