feat: start and finished course_autor block

--- a/index.html
+++ b/index.html
@@ -432,6 +432,40 @@
                 </div>
             </div>
         </div>
+
+        <!--Course_author block-->
+        <div class="course_autor">
+            <div class="container">
+                <div class="course_autor_flex">
+                    <div class="course_autor_left">
+                        <h2 class="autor_title">Автор Курса</h2>
+                        <p class="autor_text">
+                            Основателем курса является Владимир Ким, действующий и <br> ведущий специалист в области искусственного интеллекта в <br> Южной Корее, который разрабатывал системы искусственного <br>интеллекта для компаний Samsung SDS, LG science park <br>
+                            и LG digital park.
+                        </p>
+                        <p class="autor_text padd">
+                            На данный момент, Владимир занимается разработкой <br> виртуальных сенсоров на основе нейронных сетей.
+                        </p>
+                        <p class="autor_text padd">
+                            Является одним из авторов диссертации об обработке больших <br> данных для Южнокорейского института по развитию Интернета.
+                        </p>
+                        <p class="autor_text padd">
+                            Действующий член ассоциации разработчиков программного <br> обеспечения в Южной Корее.
+                        </p>
+                        <p class="autor_text padd">
+                            Активно участвует в R&D проектах по внедрению искусственного <br> интеллекта для государственных предприятий Южной Кореи.
+                        </p>
+                    </div>
+                    <div class="course_autor_right">
+                        <img src="images/course_autor.png" alt="Autor">
+                        <div class="name_autor">
+                            <h3>Владимир Ким <br> <span>Ведущий специалист</span></h3>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
