feat: start and finished two blocks school_announcement and vacancies

--- a/index.html
+++ b/index.html
@@ -466,6 +466,128 @@
                 </div>
             </div>
         </div>
+
+        <!--School_announcements block-->
+        <div class="school">
+            <div class="container">
+                <div class="school_flex">
+                    <h2>Обьявления школы</h2>
+                    <button>Все обьявления</button>
+                </div>
+                <div class="slider">
+                    <button class="prev">
+                        <img src="images/arrow_left.png" alt="">
+                    </button>
+                    <div class="slider_window">
+                        <div class="cards_container">
+                        <div class="card">
+                            <img src="images/school_img_1.png" alt="First">
+                            <div class="card_data">
+                                <img src="images/calendar.png" alt="calendar">
+                                <p class="card_data_text">24 мая 2021</p>
+                            </div>
+                            <h4 class="card_title">Заголовок объявления из несколькиз слов</h4>
+                            <p class="card_text">
+                                Искусственный интеллект - это не одна дисциплина, <br> как думают многие, а совокупность различных <br> между
+                                собой направлений.
+                            </p>
+                            <button>Подробнее</button>
+                        </div>
+                        <div class="card">
+                            <img src="images/school_img_2.png" alt="Second">
+                            <div class="card_data">
+                                <img src="images/calendar.png" alt="calendar">
+                                <p class="card_data_text">24 мая 2021</p>
+                            </div>
+                            <h4 class="card_title">Заголовок объявления из несколькиз слов</h4>
+                            <p class="card_text">
+                                Искусственный интеллект - это не одна дисциплина, <br> как думают многие, а совокупность различных <br> между
+                                собой направлений.
+                            </p>
+                            <button>Подробнее</button>
+                        </div>
+                        <div class="card">
+                            <img src="images/school_img_3.png" alt="Third">
+                            <div class="card_data">
+                                <img src="images/calendar.png" alt="calendar">
+                                <p class="card_data_text">24 мая 2021</p>
+                            </div>
+                            <h4 class="card_title">Заголовок объявления из несколькиз слов</h4>
+                            <p class="card_text">
+                                Искусственный интеллект - это не одна дисциплина, <br> как думают многие, а совокупность различных <br> между
+                                собой направлений.
+                            </p>
+                            <button>Подробнее</button>
+                        </div>
+                    </div>
+                    </div>
+                    <button class="next">
+                        <img src="images/arrow_right.png" alt="">
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!--Vacancies-->
+        <div class="vacancies">
+            <div class="container">
+                <div class="vacancies_flex">
+                    <h2>Вакансии</h2>
+                    <button>Все вакансии</button>
+                </div>
+                <div class="slider">
+                    <button class="prev">
+                        <img src="images/arrow_left.png" alt="">
+                    </button>
+                    <div class="slider_window">
+                        <div class="cards_container">
+                        <div class="card">
+                            <img src="images/school_img_1.png" alt="First">
+                            <div class="card_data">
+                                <img src="images/calendar.png" alt="calendar">
+                                <p class="card_data_text">24 мая 2021</p>
+                            </div>
+                            <h4 class="card_title">Требуется администратор</h4>
+                            <p class="card_text">
+                                Искусственный интеллект - это не одна дисциплина, <br> как думают многие, а совокупность различных <br> между
+                                собой направлений.
+                            </p>
+                            <button>Подробнее</button>
+                        </div>
+                        <div class="card">
+                            <img src="images/school_img_2.png" alt="Second">
+                            <div class="card_data">
+                                <img src="images/calendar.png" alt="calendar">
+                                <p class="card_data_text">24 мая 2021</p>
+                            </div>
+                            <h4 class="card_title">Требуется менеджер</h4>
+                            <p class="card_text">
+                                Искусственный интеллект - это не одна дисциплина, <br> как думают многие, а совокупность различных <br> между
+                                собой направлений.
+                            </p>
+                            <button>Подробнее</button>
+                        </div>
+                        <div class="card">
+                            <img src="images/school_img_3.png" alt="Third">
+                            <div class="card_data">
+                                <img src="images/calendar.png" alt="calendar">
+                                <p class="card_data_text">24 мая 2021</p>
+                            </div>
+                            <h4 class="card_title">Требуется администратор</h4>
+                            <p class="card_text">
+                                Искусственный интеллект - это не одна дисциплина, <br> как думают многие, а совокупность различных <br> между
+                                собой направлений.
+                            </p>
+                            <button>Подробнее</button>
+                        </div>
+                    </div>
+                    </div>
+                    <button class="next">
+                        <img src="images/arrow_right.png" alt="">
+                    </button>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
