feat: start footer block

--- a/index.html
+++ b/index.html
@@ -588,6 +588,29 @@
                 </div>
             </div>
         </div>
+
+        <!--Footer-->
+        <footer class="footer">
+            <div class="container">
+                <div class="footer_flex">
+                    <div class="footer_flex_left">
+                        <div class="footer_logo">
+                            <img src="images/logo.png" alt="Logo">
+                        </div>
+                    </div>
+                    <div class="footer_flex_right">
+                        <div class="footer_mail">
+                            <img src="images/mail_icon.png" alt="Mail">
+                            <a target="_blank" href="mailto:veravlaedu@gmail.com ">veravlaedu@gmail.com </a>
+                        </div>
+                        <div class="footer_phone">
+                            <img src="images/phone_icon.png" alt="Phone">
+                            <a target="_blank" href="tel:+8210 75269192">+ 82 (10) 7526-9192 </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
