--- a/index.html
+++ b/index.html
@@ -599,7 +599,8 @@
                         </div>
                     </div>
                     <div class="footer_flex_right">
-                        <div class="footer_mail">
+                        <div class="mail_phone">
+                            <div class="footer_mail">
                             <img src="images/mail_icon.png" alt="Mail">
                             <a target="_blank" href="mailto:veravlaedu@gmail.com ">veravlaedu@gmail.com </a>
                         </div>
@@ -607,8 +608,35 @@
                             <img src="images/phone_icon.png" alt="Phone">
                             <a target="_blank" href="tel:+8210 75269192">+ 82 (10) 7526-9192 </a>
                         </div>
+                        </div>
+                        <div class="footer_social">
+                            <h3>Мы в соц сетях</h3>
+                            <a target="_blank" href="https://www.facebook.com/">
+                                <img src="images/icon_facebook.png" alt="Facebook">
+                            </a>
+                            <a target="_blank" href="https://tenchat.ru/">
+                                <img src="images/icon_vector.png" alt="Vector">
+                            </a>
+                            <a target="_blank" href="https://www.youtube.com/">
+                                <img src="images/icon_youtube.png" alt="Youtube">
+                            </a>
+                            <a target="_blank" href="https://www.whatsapp.com/">
+                                <img src="images/icon_whatsapp.png" alt="Whatsapp">
+                            </a>
+                            <a target="_blank" href="">
+                                <img src="images/icon_ico_cacao.png" alt="Ico_cacao">
+                            </a>
+                        </div>
                     </div>
                 </div>
+            </div>
+            <div class="footer_copyright">
+                <div class="first_line"></div>
+                <div class="copyright">
+                    Copyright © 2021 VeraVla edu.
+                    All rights reserved
+                </div>
+                <div class="second_line"></div>
             </div>
         </footer>
     </main>
